x overflow fix take 10

--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,9 @@ overflow-x:hidden;
     color:white;
     z-index: -1;
     width:100%;
-    height:100vh;
+    /*height:100vh;*/
 
-    {/*position:absolute;*/}
+    position:absolute;
 }
 
 
@@ -52,11 +52,19 @@ padding-left:10px
 
 .home{
 
-    border:2px solid red;
+
+
 
 }
 .App{
 
+
+
+}
+
+.main-dark{
 overflow:hidden;
+height:100vh;
+
 }
     }
