--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   -webkit-text-size-adjust: 100%;*/
 }
 body{
-  
+  overflow:hidden;
   margin: 0;
 padding:0;
 }
